<resources>
    <string name="app_name">systemInfo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="model_number">Model Number</string>
    <string name="ram">RAM</string>
    <string name="rom">ROM</string>
    <string name="battery_charging">Current Charging</string>
    <string name="camera">Camera</string>
    <string name="camera_aperture">Camera Aperture</string>
    <string name="cpu">CPU</string>
    <string name="sensor">Sensor</string>
    <string name="gpu">GPU</string>
    <string name="imei">IMEI</string>
</resources>